--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "symfony/http-client": "^7.2",
+        "symfony/mailgun-mailer": "^7.2",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
