fix: ajuste de .env.example

--- a/.env.example
+++ b/.env.example
@@ -49,18 +49,18 @@ REDIS_PORT=6379
 
 # Configuração do email (generico) para envio de tokens
 MAIL_MAILER=mailgun
-# MAIL_HOST=smtp.gmail.com
-# MAIL_PORT=587
-# MAIL_USERNAME=laravelsendemailtest@gmail.com
-# MAIL_PASSWORD=hvixtllkawighwuh
-# MAIL_ENCRYPTION=tls
-# MAIL_FROM_ADDRESS=laravelsendemailtest@gmail.com
-# MAIL_FROM_NAME="MobilidadeUrbana"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
 
-MAILGUN_DOMAIN=sandboxb1e0cd6e547646608be1dc021c709574.mailgun.org
-MAILGUN_SECRET=pubkey-76752054eaa83fb22edb904f4fa83d39
-MAILGUN_FROM_ADDRESS="MobilidadeUrbana@gmail.com"
-MAIL_FROM_NAME="MobilidadeUrbana"
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
+MAILGUN_FROM_ADDRESS=
+MAIL_FROM_NAME=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
