--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.8.2",
+        "@vitejs/plugin-vue": "^5.2.3",
+        "axios": "^1.8.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.0.8",
+        "js-cookie": "^3.0.5",
+        "vue": "^3.5.13"
     }
 }
