--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,6 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+SESSION_SECURE_COOKIE=false
+
 VITE_APP_NAME="${APP_NAME}"
