--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
         "js-cookie": "^3.0.5",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-cropper": "^1.1.4"
     }
 }
